# Product-Review-Sentiment-Analysis

./: .gitattributes  README.md  main.py  pyproject.toml  requirements.txt  sentiment_analyzer.py  training.ipynb
model/: sentiment_analysis_model.h5  word2vec_model.bin.syn1neg.npy  word2vec_model.bin.wv.vectors.npy
